tests/integrations/basic-fail/tests/actual_tests_bless/revisions.bar.stderr
error[E0308]: mismatched types
  --> tests/actual_tests_bless/revisions.rs:11:9
   |
11 |     add("42", 3);
   |     --- ^^^^ expected `usize`, found `&str`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/tests/integrations/basic-fail/src/lib.rs:1:8
   |
1  | pub fn add(left: usize, right: usize) -> usize {
   |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
